# rust_lol_pipeline

./: .gitignore  .gitignore.swp  Cargo.toml
ddl/: league_matches_ban_picks.sql  league_matches_match_info.sql  league_matches_match_outcomes.sql  league_matches_objectives.sql
src/: api.rs  config.rs  lib.rs  main.rs  pipeline.rs
src/api/: lol_match_data.rs  lol_match_info.rs  lol_matches.rs  lol_riot_account.rs  match_data.rs  match_info.rs  matches.rs  mod.rs  request.rs  summoner.rs
src/db/: postgres.rs
src/utils/: bucket.rs
