[package]
name = "lol_data_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features= ["json", "blocking"] }
tokio = { version = "1", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
# mongodb = "2.3.1"
