[package]
name = "lol_data_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features= ["json", "blocking"] }
tokio = { version = "1", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
postgres = "0.19.4"
anyhow = "1.0.82"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio", "tls-native-tls", "json"] }
clap = { version = "4.5.4", features = ["derive"] }
governor = "0.6.3"
